Clean nozzle on print start

--- a/config/macro/print_start.cfg
+++ b/config/macro/print_start.cfg
@@ -28,7 +28,11 @@ gcode: |
     M117 Nozzle heating..
     M109 S{EXTRUDER_TEMP} ; wait for extruder temp
 
-    PURGE_NOZZLE
+	CLEAN_NOZZLE
+
+	PURGE_NOZZLE
+
+	CLEAN_NOZZLE
 
     M117 Homing axis..
     G28; home all
