Clean nozzle on priny_end

--- a/config/macro/print_end.cfg
+++ b/config/macro/print_end.cfg
@@ -23,13 +23,16 @@ gcode: |
             G1 Z{MAX_LIFT} F3000
             {% if MAX_LIFT|float > 10 %}
 
-                G90
-                G1 X{PARK_X} Y{PARK_Y} F{(PARK_SPEED * 60)|int}; park nozzle
-                G91
+                CLEAN_NOZZLE
 
                 PURGE_NOZZLE RETRACTION_LENGTH=10
+
                 SHAKE_NOZZLE
 
+                CLEAN_NOZZLE
+
+                G90
+                G1 X{PARK_X} Y{PARK_Y} F{(PARK_SPEED * 60)|int}; park nozzle
             {% endif %}
         {% endif %}
     {% endif %}
