SKR 1.3 as default

--- a/config/board_pins.cfg
+++ b/config/board_pins.cfg
@@ -1,5 +1,6 @@
-[include ./pin/btt-skr-v1.4.cfg]
+#[include ./pin/btt-skr-v1.4.cfg]
 #[include ./pin/fysetc-spider.cfg]
+[include ./pin/btt-skr-v1.3.cfg]
 
 ## Personal configuration
 # [board_pins mcu]
