--- a/config/mcu.cfg
+++ b/config/mcu.cfg
@@ -1,8 +1,16 @@
+#my old SK 1.4 Turbo
+#[mcu]
+#serial = /dev/serial/by-id/usb-Klipper_lpc1769_0D000004C0846AAF96B1555EC72000F5-if00
+#
+#[mcu z]
+#serial = /dev/serial/by-id/usb-Klipper_lpc1769_09A00009C0846AAFEEC4555EC72000F5-if00
+
+#current SKR 1.3
 [mcu]
-serial = /dev/serial/by-id/usb-Klipper_lpc1769_0D000004C0846AAF96B1555EC72000F5-if00
+serial = /dev/serial/by-id/usb-Klipper_lpc1768_0FA0FF1548104AAF2BC3675DC52000F5-if00
 
 [mcu z]
-serial = /dev/serial/by-id/usb-Klipper_lpc1769_09A00009C0846AAFEEC4555EC72000F5-if00
+serial = /dev/serial/by-id/usb-Klipper_lpc1768_0EC00013881C4AAF02B8685DC02000F5-if00
 
-#[mcu rpi]
-#serial: /tmp/klipper_host_mcu
+[mcu rpi]
+serial: /tmp/klipper_host_mcu
