Added acceleration measuerement

--- a/config/printer.cfg
+++ b/config/printer.cfg
@@ -1,7 +1,19 @@
 [printer]
 kinematics = corexy
 max_velocity = 300
-max_accel = 3000
+
+#default config
+#max_accel = 3000
+#
+# uncomment bellow when measure max accel
+# for measuerement
+#max_accel: 10000
+#max_accel_to_decel: 10000
+ 
+# my current max
+max_accel: 4400
+
 max_z_velocity = 25
 max_z_accel = 350
 square_corner_velocity = 5
+
