Current print start

--- a/config/macro/print_start.cfg
+++ b/config/macro/print_start.cfg
@@ -1,7 +1,7 @@
 [gcode_macro PRINT_START]
-default_parameter_MAX_FAN_SPEED: 100 ;
-default_parameter_NO_FAN_BELOW: 0 ; disable fan for the first given layers
-gcode: |
+default_parameter_max_fan_speed = 100
+default_parameter_no_fan_below = 0
+gcode = |
     TURN_ON_LIGHTS
     BEEP TONE=1000 DURATION=200
     SLEEP MS=100
@@ -14,7 +14,9 @@ gcode: |
 
     ;
     {% if 'temperature_fan exhaust' in printer and BED_TEMP|float < 80 %}
-        SET_TEMPERATURE_FAN_TARGET temperature_fan=exhaust target=40
+    # I have sensor inside the chain and if the temperature is 40 it is to hot for my voron. I had some problems with that 35 is a great temperature for my case.
+    #    SET_TEMPERATURE_FAN_TARGET temperature_fan=exhaust target=40
+         SET_TEMPERATURE_FAN_TARGET temperature_fan=exhaust target=35
     {% endif %}
 
     M117 Bed heating..
@@ -27,22 +29,16 @@ gcode: |
 
     M117 Nozzle heating..
     M109 S{EXTRUDER_TEMP} ; wait for extruder temp
-
-	CLEAN_NOZZLE
-
-	PURGE_NOZZLE
-
-	CLEAN_NOZZLE
-
     M117 Homing axis..
-    G28; home all
+	
+   G28; home all
 
-    G90 ; use absolute coordinates
+# This would nice feature but it shold be re-thinked
+#	CLEAN_NOZZLE
+  
+# don't like this move on print start
+#	G1 Z20 F3000                   ; move nozzle away from bed
+   G90
+   PRIME_LINE
+   CLEAR_SCREEN
 
-    PRIME_LINE
-        
-    CLEAR_SCREEN
-
-    G90
-    G92 E0.0
-    
